--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,4 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 #api_key
-lib\infrastructure\api_key.dart
+lib/infrastructure/api_key.dart
